--- a/agency-landing-page/package.json
+++ b/agency-landing-page/package.json
@@ -2,7 +2,7 @@
   "name": "agency-landing-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://William-Surya-Wijaya.github.io/agency-landing-page/agency-landing-page",
+  "homepage": "https://William-Surya-Wijaya.github.io/agency-landing-page",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
